# SSLight

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
Model Weights/: README.md  best.pt  last.pt
data/: README.md  pdb_ids.txt
embeddings/: .gitkeep  README.md
scripts/: embed_dataset.py  prepare_dataset.py
scripts/data/: download_structures.py  generate_jsonl.py
src/sslight/: __init__.py  cli.py  constants.py  labels.py
src/sslight/data/: __init__.py  collate.py  dataset.py  fasta.py  ss_dataset.py
src/sslight/embeddings/: __init__.py  generator.py  storage.py
src/sslight/models/: __init__.py  cnn_head.py
src/sslight/training/: __init__.py  checkpoint.py  evaluate.py  metrics.py  trainer.py
tests/: __init__.py  test_collate.py  test_constants.py  test_dataset.py  test_embeddings.py  test_training.py
